kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: devops
  labels:
    kubernetes.name: devops
